--- a/client/styles/fonts.css
+++ b/client/styles/fonts.css
@@ -6,8 +6,7 @@
          url('fonts/nootype_-_radikal-webfont.woff') format('woff'),
          url('fonts/nootype_-_radikal-webfont.ttf') format('truetype'),
          url('fonts/nootype_-_radikal-webfont.svg#radikalregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    font-weight: normal; font-style: normal;
 }
 
 @font-face {
@@ -18,8 +17,7 @@
          url('fonts/nootype_-_radikal_thin-webfont.woff') format('woff'),
          url('fonts/nootype_-_radikal_thin-webfont.ttf') format('truetype'),
          url('fonts/nootype_-_radikal_thin-webfont.svg#radikalthin') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    font-weight: normal; font-style: normal;
 }
 
 @font-face {
@@ -30,8 +28,7 @@
          url('fonts/nootype_-_radikal_medium-webfont.woff') format('woff'),
          url('fonts/nootype_-_radikal_medium-webfont.ttf') format('truetype'),
          url('fonts/nootype_-_radikal_medium-webfont.svg#radikalmedium') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    font-weight: normal; font-style: normal;
 }
 
 @font-face {
@@ -42,8 +39,7 @@
          url('fonts/nootype_-_radikal_light-webfont.woff') format('woff'),
          url('fonts/nootype_-_radikal_light-webfont.ttf') format('truetype'),
          url('fonts/nootype_-_radikal_light-webfont.svg#radikallight') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    font-weight: normal; font-style: normal;
 }
 
 @font-face {
@@ -54,8 +50,7 @@
          url('fonts/nootype_-_radikal_black-webfont.woff') format('woff'),
          url('fonts/nootype_-_radikal_black-webfont.ttf') format('truetype'),
          url('fonts/nootype_-_radikal_black-webfont.svg#radikalblack') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    font-weight: normal; font-style: normal;
 }
 
 @font-face {
@@ -66,8 +61,7 @@
          url('fonts/gothmmed_0-webfont.woff') format('woff'),
          url('fonts/gothmmed_0-webfont.ttf') format('truetype'),
          url('fonts/gothmmed_0-webfont.svg#gotham-mediumgotham-medium') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    font-weight: normal; font-style: normal;
 }
 @font-face {
     font-family: 'gotham-lightgotham-light';
@@ -77,8 +71,7 @@
          url('fonts/gothmlig_0-webfont.woff') format('woff'),
          url('fonts/gothmlig_0-webfont.ttf') format('truetype'),
          url('fonts/gothmlig_0-webfont.svg#gotham-lightgotham-light') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    font-weight: normal; font-style: normal;
 }
 
 @font-face {
@@ -88,8 +81,7 @@
          url('fonts/gothmbok-webfont.woff') format('woff'),
          url('fonts/gothmbok-webfont.ttf') format('truetype'),
          url('fonts/gothmbok-webfont.svg#gotham-bookgotham-book') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    font-weight: normal; font-style: normal;
 }
 @font-face {
     font-family: 'gotham-boldgotham-bold';
@@ -98,8 +90,7 @@
          url('fonts/gothmbol.woff') format('woff'),
          url('fonts/gothmbol.ttf') format('truetype'),
          url('fonts/gothmbol.svg#gotham-boldgotham-bold') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    font-weight: normal; font-style: normal;
 }
 
 @font-face {
@@ -110,6 +101,15 @@
          url('fonts/bebas_-webfont.woff') format('woff'),
          url('fonts/bebas_-webfont.ttf') format('truetype'),
          url('fonts/bebas_-webfont.svg#bebasregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    font-weight: normal; font-style: normal;
+}
+
+@font-face {
+  	font-family: 'Glyphicons Halflings';
+  	src: url('fonts/glyphicons-halflings-regular.eot');
+  	src: url('fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
+  		 url('fonts/glyphicons-halflings-regular.woff') format('woff'), 
+		 url('fonts/glyphicons-halflings-regular.ttf') format('truetype'), 
+		 url('fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+    font-weight: normal; font-style: normal;
 }
